# velodyne_driver

./: README.md  azure-pipelines.yml
lidar_utils/: CMakeLists.txt  package.xml
lidar_utils/include/lidar_utils/: lidar_types.hpp  lidar_utils.hpp  point_cloud_utils.hpp  visibility_control.hpp
lidar_utils/src/: point_cloud_utils.cpp
lidar_utils/test/src/: test_fast_atan2.cpp
velodyne_driver/: CMakeLists.txt  package.xml
velodyne_driver/include/velodyne_driver/: visibility_control.hpp  vlp16_translator.hpp
velodyne_driver/src/: vlp16_config.cpp  vlp16_translator.cpp
velodyne_driver/test/include/: test_driver.h
velodyne_driver/test/src/: test_velodyne.cpp
velodyne_node/: CMakeLists.txt  package.xml
velodyne_node/include/velodyne_node/: velodyne_cloud_node.hpp  visibility_control.hpp
velodyne_node/src/: velodyne_cloud_node.cpp  velodyne_cloud_node_main.cpp
